Complete rainfall prediction dashboard with deployment configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-﻿__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.env
-.venv
-.ipynb_checkpoints/
-.DS_Store
-Thumbs.db
-logs/debug.log
-models/*.cb
-models/*.onnx
-models/*.tflite
-reports/shap_plots/
-.hypotheses/
-logs/hpo.db
-
+.vercel
