--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,8 @@
-﻿pandas>=2.2
-numpy>=1.26
-scikit-learn>=1.5
-catboost>=1.2
-lightgbm>=4.5
-xgboost>=2.1
-optuna>=3.6
-imbalanced-learn>=0.12
-shap>=0.46
-matplotlib>=3.9
-seaborn>=0.13
-plotly>=5.24
-onnx>=1.16
-onnxruntime>=1.19
-tensorflow-cpu>=2.16
-pyyaml>=6.0
-streamlit>=1.38
-jupyterlab>=4.2
-
+flask==2.3.3
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+joblib==1.3.1
+lightgbm==4.0.0
+xgboost==1.7.5
+gunicorn==21.2.0
