--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
 services:
   - type: web
-    name: rainfall-prediction-dashboard
+    name: ghana-rainfall-dashboard
     runtime: python3
+    pythonVersion: "3.9"
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.0
       - key: FLASK_ENV
         value: production
