--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
   - type: web
     name: ghana-rainfall-dashboard
-    runtime: python3
-    pythonVersion: "3.9"
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
+    runtime: python
+    pythonVersion: "3.9.18"
+    buildCommand: "pip install --only-binary=numpy,scipy,scikit-learn -r requirements.txt"
+    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT --workers 2"
     envVars:
       - key: FLASK_ENV
         value: production
+      - key: PYTHONPATH
+        value: "/opt/render/project/src"
