--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 flask==2.3.3
 gunicorn==21.2.0
-numpy>=1.24.0,<1.25.0
-pandas==2.0.3
-scikit-learn==1.3.0
-joblib==1.3.1
-lightgbm==4.0.0
-xgboost==1.7.5
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.0
+joblib==1.4.2
+lightgbm==4.3.0
+xgboost==2.0.3
